# magnum-game

./: .gitignore  CMakeLists.txt  README.md  build-android-dependencies.sh  build-emscripten-dependencies.sh  build-release.sh
models/levels/: level-1.blend  level-1.blend1  level-1.glb
models/levels-src/: level-1.blend  level-1.blend1
modules/: BulletConfig.cmake
shaders/: GameShader.frag  GameShader.vert  ShadowCaster.frag  ShadowCaster.vert
src/: Animator.cpp  Animator.h  AnimatorAsset.cpp  AnimatorAsset.h  CMakeLists.txt  CameraController.cpp  CameraController.h  DebugLines.cpp  DebugLines.h  GameAssets.cpp  GameAssets.h  GameModels.cpp  GameModels.h  GameShader.cpp  GameShader.h  GameState.cpp  GameState.h  IEnableDrawable.h  MagnumGameApp.cpp  MagnumGameApp.h  MagnumGameApp_debug.cpp  MagnumGameApp_init.cpp  MagnumGameApp_input.cpp  MagnumGameApp_text.cpp  MagnumGameApp_ui.cpp  MagnumGameCommon.h  OnGroundQuery.h  Player.cpp  Player.h  RandomUtil.cpp  RandomUtil.h  RigidBody.cpp  RigidBody.h  SdlGameController.cpp  SdlGameController.h  ShadowCasterDrawable.cpp  ShadowCasterDrawable.h  ShadowCasterShader.cpp  ShadowCasterShader.h  ShadowLight.cpp  (+17 more)
